--- a/styles/pages/followers.css
+++ b/styles/pages/followers.css
@@ -1,70 +1,80 @@
-.follower-page {
-    /* display: flex;
-    align-items: center; */
+/* Preview Followers */
+.preview-followers-container {
+    background-color: lightgray;
+    width: calc(1200px * .4);
+    height: calc(675px * .4);
+    box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
 }
 
-.follower-page--grid {
-    /* background-color: red; */
+.preview-followers-container-inner {
     width: 100%;
-    height: 50rem;
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
+    height: 100%;
 }
 
-.grid-component {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-
-.follower-preview {
+#preview__followers-1.preview-followers-container-inner {
     background-color: var(--color-primary);
     color: var(--color-secondary);
-    text-align: center;
-    /* width: 600px;
-    height: 337.5px; */
-
-    min-width: calc(1200px * .4);
-    min-height: calc(675px * .4);
-
-    box-shadow: rgb(100 100 111 / 20%) 0px 7px 29px 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.follower-preview__icon {
-    font-size: 6rem;
+#preview__followers-1 .follower-preview__icon {
+    font-size: calc(13rem * .4);
 }
 
-.follower-preview__text {
+#preview__followers-1 .follower-preview__text {
     margin: 1.6rem 0 2.8rem 0;
 }
 
-.follower-preview__text--number {
-    font-size: 5.4rem;
+#preview__followers-1 .follower-preview__text--number {
+    font-size: calc(13rem * .4);
     font-weight: 500;
 }
 
-.follower-preview__text--text {
-    font-size: 2.6rem;
+#preview__followers-1 .follower-preview__text--text {
+    font-size: calc(6.5rem * .4);
     font-weight: 500;
-
 }
 
-.follower-preview__message {
-    font-size: 2rem;
+#preview__followers-1 .follower-preview__message {
+    font-size: calc(5rem* .4);
     font-weight: 100;
 }
 
+
+
+
+
+
+
+
 @media only screen and (max-width: 1000px) {
+    .preview-followers-container {
+        width: calc(1200px * .3);
+        height: calc(675px * .3);
+    }
+
     .follower-preview {
-        /* min-width: calc(1200px * .3);
-        min-height: calc(675px * .3); */
         transform: scale(75%);
+    }
+
+
+    #preview__followers-1 .follower-preview__icon {
+        font-size: calc(13rem * .3);
+    }
+
+    #preview__followers-1 .follower-preview__text--number {
+        font-size: calc(13rem * .3);
+    }
+
+    #preview__followers-1 .follower-preview__text--text {
+        font-size: calc(6.5rem * .3);
+    }
+
+    #preview__followers-1 .follower-preview__message {
+        font-size: calc(5rem* .3);
     }
 }
 
@@ -80,6 +90,30 @@
     }
 }
 
+@media only screen and (max-width: 500px) {
+    .preview-followers-container {
+        width: calc(1200px * .25);
+        height: calc(675px * .25);
+    }
+
+
+    #preview__followers-1 .follower-preview__icon {
+        font-size: calc(13rem * .25);
+    }
+
+    #preview__followers-1 .follower-preview__text--number {
+        font-size: calc(13rem * .25);
+    }
+
+    #preview__followers-1 .follower-preview__text--text {
+        font-size: calc(6.5rem * .25);
+    }
+
+    #preview__followers-1 .follower-preview__message {
+        font-size: calc(5rem* .25);
+    }
+}
+
 @media only screen and (max-width: 400px) {
     .follower-preview {
         transform: scale(65%);
@@ -90,5 +124,3 @@
 .element-hidden {
     display: none;
 }
-
-/* Follower banner dimensions: 1200px 675px */
